<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel List</string>
    <string name="title_activity_travel_list">TravelListActivity</string>

    <string name="title_activity_edit_travel">EditTravelActivity</string>
   
    <string name="action_settings">Settings</string>
    <string name="compartir">Compartir</string>
    <string name="menu_new_travel">Nuevo viaje</string>
    <string name="menu_edit_travel">Editar</string>
    <string name="menu_delete_travel">Borrar</string>
    
    
<!-- Cadenas para los textos en pantalla de EditTravelActivity -->

    <string name="ciudad">Ciudad</string>
    <string name="hint_ciudad">Qué ciudad has visitado</string>
    
    <string name="pais">País</string>
    <string name="hint_pais">A qué país pertenece</string>

    <string name="anio">Año</string>
    <string name="hint_anio">En qué año la visitastes</string>
    
    <string name="anotacion">Anotación</string>
    <string name="hint_anotacion">Aquí puedes escribir algún comentario sobre el viaje</string>
    <string name="boton_guardar">Guardar</string>
    
    
    <string name="nueva_visita">Nueva visita: </string>
    
    <string name="ciudad_vacia">El nombre de la ciudad no puede estar vacío</string>
    <string name="anio_incorrecto">El año debe ser un número entre el 1900 y el actual</string>
    
    
    
    
    
<!-- Cadenas para los textos en pantalla de TravelActivity -->    

    <string name="abre_parentesis"> (</string>
    <string name="cierra_parentesis">)</string>
    
    <string name="prefijo_anio">Año: </string>
    
    
</resources>
