<!-- 
   Ander Ortega Herrero.
  		Ejercicio: Unidad 3. Ejercicio Feedback 1.
  		Asignatura: UAX 002 - Desarrollo para el sistema operativo Android.
    	Curso: MASTER UNIVERSITARIO EN INGENIERIA DE DESARROLLO PARA DISPOSITIVOS MOVILES.
 		OpenUAX. CURSO 2014-2015.
  
 	He optado por un Relative layout en el que he colocado los distintos elementos.
 	El layout no ocupa el alto total de la pantalla, porque así podremos colocar en el futuro más de uno.
 	
 	
 		
 -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.uax.android.travel.TravelActivity" >

     
    
	<TextView
	    android:id="@+id/viaje_ciudad"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentLeft="true"
	    android:textStyle="bold"
	    android:textSize="15sp"
	    android:text="Ciudad"     />
	   
	
	<TextView
	    android:id="@+id/abre_parentesis"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/viaje_ciudad"
	    android:textStyle="bold"
	    android:textSize="15sp"
	    android:text="@string/abre_parentesis"  />
	
	
	<TextView 
	    android:id="@+id/viaje_pais"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/abre_parentesis"  
	    android:textStyle="bold"
	    android:textSize="15sp"
	    android:text="Pais" />
	
	
	<TextView
	    android:id="@+id/cierra_parentesis"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/viaje_pais"
	    android:textStyle="bold"
	    android:textSize="15sp"
	    android:text="@string/cierra_parentesis"  />
	
	
	<TextView 
	    android:id="@+id/prefijo_anio"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/prefijo_anio"
	    android:layout_below="@+id/viaje_ciudad"
	    android:layout_alignParentLeft="true"
	    />
	
	
	<TextView
	    android:id="@+id/viaje_anio"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/prefijo_anio"
	    android:layout_below="@+id/viaje_ciudad"
	    android:text="Año" />
	

	
	
</RelativeLayout>
